Jenkins-deployment.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: jenkins-ns
---
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: jenkins-ns
  name: jenkins-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: jenkins
  template:
    metadata:
      labels:
        app: jenkins

    spec:

#      tolerations:
#        - key: "node.kubernetes.io/unreachable"
#          operator: "Exists"
#          effect: "NoSchedule"

      containers:
      - name: jenkins
        image: jenkins/jenkins:lts
        ports:
        - containerPort: 8080
        - containerPort: 32001
        volumeMounts:
        - name: jenkins-home
          mountPath: /var/jenkins_home
      volumes:
      - name: jenkins-home
        persistentVolumeClaim:
          claimName: jenkins-pvc

---
apiVersion: v1
kind: Service
metadata:
#  creationTimestamp: null
  name: jenkins-svc
  namespace: jenkins-ns
spec:
  ports:
  - port: 8080
    protocol: TCP
    targetPort: 8080
    name: ui
  - port: 32001
    targetPort: 32001
    name: agetnt-connection
  selector:
    app: jenkins
