Jenkins-nodeport-for-agent-connectivity.yaml
apiVersion: v1
kind: Service
metadata:
  name: jenkins-deployment
  namespace: jenkins-ns
spec:
  ports:
  - port: 32001
    protocol: TCP
    targetPort: 32001
    nodePort: 32001
  selector:
    app: jenkins
  type: NodePort
