gitlab-deployment.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: gitlab-ns

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: gitlab-deployment
  namespace: gitlab-ns
spec:
  replicas: 1
  selector:
    matchLabels:
      app: gitlab
  template:
    metadata:
      labels:
        app: gitlab
    spec:

#      tolerations:
#        - key: "node-role.kubernetes.io/master"
#          operator: "Exists"
#          effect: "NoSchedule"

      containers:
 #       - name: test-sidecar
 #         image: busybox
 #         command: ["sleep","5000"]
        - name: web
          image: gitlab/gitlab-ce:latest
          ports:
            - containerPort: 80
              name: http
            - containerPort: 22
              name: ssh
          volumeMounts:
            - name: config-volume
              mountPath: /etc/gitlab
            - name: logs-volume
              mountPath: /var/log/gitlab
            - name: data-volume
              mountPath: /var/opt/gitlab
          resources:
            limits:
              memory: "6Gi"
            requests:
              memory: "1Gi"
      volumes:
        - name: config-volume
          persistentVolumeClaim:
            claimName: config-pvc
        - name: logs-volume
          persistentVolumeClaim:
            claimName: logs-pvc
        - name: data-volume
          persistentVolumeClaim:
            claimName: data-pvc
---
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  name: gitlab-clusterip-svc
  namespace: gitlab-ns
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: gitlab
  type: ClusterIP
