Jenkins-ingress-resource.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: jenkins-ui
  namespace: jenkins-ns

spec:
  defaultBackend:
    service:
      name: jenkins-svc
      port:
        number: 8080
  ingressClassName: nginx
  rules:
  - host: jenkins.1gate1.tk
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: jenkins-svc
            port:
              number: 8080
