gitlab-ingress-resource.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: gitlab-ui
  namespace: gitlab-ns
  annotations:
    nginx.ingress.kubernetes.io/secure-backends: "true"
    nginx.ingress.kubernetes.io/ssl-passthrough: "true"
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
spec:
  tls:
    - hosts:
      - your-dns-fqdn-or-domain.com         #for example , gitlab.yourdomain.com
      secretName: tls-secret
  defaultBackend:
    service:
      name: gitlab-clusterip-svc
      port:
        number: 443
  ingressClassName: nginx
  rules:
  - host: your-dns-fqdn-or-domain.com      #for example , gitlab.yourdomain.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: gitlab-clusterip-svc
            port:
              number: 443
